--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost/doctor
 spring.datasource.username=root
 spring.datasource.password=1998
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.error.include-stacktrace=never
